<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:layout_marginTop="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nombreTv"
        android:layout_gravity="center">
    </TextView>
    <EditText
        android:id="@+id/nombreUsuarioEt"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center">
    </EditText>

    <TextView
        android:layout_marginTop="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/passwordTv"
        android:layout_gravity="center">
    </TextView>
    <EditText
        android:id="@+id/claveUsuarioEt"
        android:inputType="numberPassword"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center">
    </EditText>

    <Button
        android:onClick="ingresar"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorAccent"
        android:text="@string/ingresarBtn">
    </Button>

</LinearLayout>